--- a/Etapa 1/CSS/aula1306/style.css
+++ b/Etapa 1/CSS/aula1306/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: papayawhip;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   color: midnightblue;
 }
 
@@ -11,9 +11,21 @@ h1, h2, h3 {
 a {
   text-decoration: none;
   padding-right: 12px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+}
+
+ul {
+  list-style: none;
 }
 
 img {
   width: 240px;
   border-radius: 16px;
+}
+
+span.material-symbols-outlined {
+  font-size: 12px;
 }
