--- a/css-global/index.css
+++ b/css-global/index.css
@@ -19,19 +19,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-end;
   height: 100vh;
   margin: auto;
   padding-left: 10%;
+  padding-bottom: 10%;
 }
 
 h1, h2 {
   padding: 10px 0px;
   color: #d9b800;
-}
-
-h1 {
-  margin-top: 50px;
 }
 
 a {
@@ -46,6 +43,7 @@ a {
   body {
     background-image: url("../img/bg_mobile.png");
     height: auto;
-    padding-left: 16px
+    padding-left: 16px;
+    justify-content: center;
   }
 }
